# Detection

./: CMakeLists.txt  README.me
cmake/: CMakeCache.txt  Makefile  SUBGLM.cmake  SUBMODULE.cmake  cmake_install.cmake  compile_commands.json
cmake/glm-prefix/src/glm-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  cmake_uninstall.cmake  glm.pc  glmConfig.cmake  glmTargets.cmake  install_manifest.txt
cmake/glm-prefix/src/glm-build/glm/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/glm-prefix/src/glm-build/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
cmake/glm-prefix/src/glm-build/test/bug/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-bug_ms_vec_static
cmake/glm-prefix/src/glm-build/test/core/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-core_cpp_constexpr  test-core_cpp_defaulted_ctor  test-core_force_aligned_gentypes  test-core_force_ctor_init  test-core_force_explicit_ctor  test-core_force_inline  test-core_force_pure  test-core_force_unrestricted_gentype  test-core_force_xyzw_only  test-core_func_common  test-core_func_exponential  test-core_func_geometric  test-core_func_integer  test-core_func_integer_bit_count  test-core_func_integer_find_lsb  test-core_func_integer_find_msb  test-core_func_matrix  test-core_func_noise  test-core_func_packing  test-core_func_swizzle  test-core_func_trigonometric  test-core_func_vector_relational  test-core_setup_force_cxx98  test-core_setup_force_size_t_length  test-core_setup_message  test-core_setup_platform_unknown  test-core_setup_precision  test-core_type_aligned  test-core_type_cast  test-core_type_ctor  test-core_type_int  test-core_type_length  test-core_type_mat2x2  test-core_type_mat2x3  test-core_type_mat2x4  test-core_type_mat3x2  test-core_type_mat3x3  (+8 more)
cmake/glm-prefix/src/glm-build/test/ext/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-ext_matrix_relational  test-ext_matrix_transform  test-ext_quaternion_common  test-ext_quaternion_exponential  test-ext_quaternion_geometric  test-ext_quaternion_relational  test-ext_quaternion_transform  test-ext_quaternion_trigonometric  test-ext_quaternion_type  test-ext_scalar_common  test-ext_scalar_constants  test-ext_scalar_int_sized  test-ext_scalar_relational  test-ext_scalar_uint_sized  test-ext_scalar_ulp  test-ext_vec1  test-ext_vector_bool1  test-ext_vector_common  test-ext_vector_iec559  test-ext_vector_integer  test-ext_vector_relational  test-ext_vector_ulp
cmake/glm-prefix/src/glm-build/test/gtc/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-gtc_bitfield  test-gtc_color_space  test-gtc_constants  test-gtc_epsilon  test-gtc_integer  test-gtc_matrix_access  test-gtc_matrix_integer  test-gtc_matrix_inverse  test-gtc_matrix_transform  test-gtc_noise  test-gtc_packing  test-gtc_quaternion  test-gtc_random  test-gtc_reciprocal  test-gtc_round  test-gtc_type_aligned  test-gtc_type_precision  test-gtc_type_ptr  test-gtc_ulp  test-gtc_vec1
cmake/glm-prefix/src/glm-build/test/gtx/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-gtx  test-gtx_associated_min_max  test-gtx_closest_point  test-gtx_color_encoding  test-gtx_color_space  test-gtx_color_space_YCoCg  test-gtx_common  test-gtx_compatibility  test-gtx_component_wise  test-gtx_dual_quaternion  test-gtx_easing  test-gtx_euler_angle  test-gtx_extend  test-gtx_extended_min_max  test-gtx_exterior_product  test-gtx_fast_exponential  test-gtx_fast_square_root  test-gtx_fast_trigonometry  test-gtx_functions  test-gtx_gradient_paint  test-gtx_handed_coordinate_space  test-gtx_integer  test-gtx_intersect  test-gtx_io  test-gtx_load  test-gtx_log_base  test-gtx_matrix_cross_product  test-gtx_matrix_decompose  test-gtx_matrix_factorisation  test-gtx_matrix_interpolation  test-gtx_matrix_major_storage  test-gtx_matrix_operation  test-gtx_matrix_query  test-gtx_matrix_transform_2d  test-gtx_norm  test-gtx_normal  test-gtx_normalize_dot  (+21 more)
cmake/glm-prefix/src/glm-build/test/perf/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test-perf_matrix_div  test-perf_matrix_inverse  test-perf_matrix_mul  test-perf_matrix_mul_vector  test-perf_matrix_transpose  test-perf_vector_mul_matrix
cmake/glm-prefix/tmp/: glm-cfgcmd.txt
cmake/src/: Makefile  cmake_install.cmake
proto/: Hf1.m  Hf2.m  Hf3.m  Hf4.m  afficheImg.m  genTransfos.m  getCoords.m  hD1.m  hD5.m  hD50Kth.m  hD6.m  hD75Kth.m  hD90Kth.m  hDKth.m  main.m  main.m~  normL2.m  toAffine.m
src/: CMakeLists.txt  main.cpp
src/CellTree/: CellTree.cpp  CellTree.hpp
src/Cloud/: cloud.cpp  cloud.hpp
src/Distances/: distances.cpp  distances.h  distances.hpp
src/ImageManager/: imagemanager.cpp  imagemanager.hpp
src/Raster/: raster.cpp  raster.hpp
src/Search/: Search.cpp  Search.hpp
